--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@ development:
   encoding: unicode
   database: ideaz_development
   pool: 5
-  username: ideaz
-  password:
+  username: cpi2
+  password: cpi2
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
